# docs/swagger.json
@@ -1,23 +1,8 @@
 {
-    "schemes": [
-        "http"
-    ],
     "swagger": "2.0",
     "info": {
-        "description": "This is a products' prices getting, filtering and monitoring API.",
-        "title": "Price Service API",
-        "contact": {
-            "name": "API Support",
-            "email": "maksimacx50@gmail.com"
-        },
-        "license": {
-            "name": "Unlicense",
-            "url": "https://unlicense.org/"
-        },
-        "version": "0.9.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
         "/api/markets": {
             "get": {
@@ -354,6 +339,15 @@
                         "description": "the amount of the products in response's sample",
                         "name": "amount",
                         "in": "query"
+                    },
+                    {
+                        "description": "the headers that need to be included into the async response",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/chttp.ExtraHeaders"
+                        }
                     }
                 ],
                 "responses": {
@@ -621,6 +615,28 @@
         }
     },
     "definitions": {
+        "chttp.ExtraHeaders": {
+            "type": "object",
+            "properties": {
+                "headers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/chttp.Header"
+                    }
+                }
+            }
+        },
+        "chttp.Header": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
         "chttp.ProductResponse": {
             "type": "object",
             "properties": {
